# thaiboardgameRAG

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: gunicorn_config.py  index_docs.py  supabase_insert.py  web.py
docs/: 7 Wonders (TH) 7 สิ่งมหัศจรรย์.txt  7 Wonders Architects (TH) 7 สิ่งมหัศจรรย์ ยอดสถาปนิก.txt  8 BIT BOX (TH) 8 บิทบ๊อกซ์.txt  Art Society (TH) ศิลป์สโมสร.txt  Bandido (THEN) แบนดิโด.txt  Betakkuma  Fart & Furious ตดทะลุนรก.txt  Bloodbound (TH) สงครามแวมไพร์.txt  Bloody Inn (TH) โรงแรมสีเลือด.txt  Bloody Inn Carnies (TH) โรงแรมสีเลือด ชาวคณะหรรษา.txt  Book - Captive (TH).txt  Book - Knight (TH).txt  Book - Sherlock Holmes & Moriarty Associates (TH) เชอร์ล็อคโฮล์มส์ & มอริอาร์ตี้ พันธมิตรอันตราย.txt  Book - Sherlock Holmes Shadows of Jack Ripper (TH) เชอร์ล็อค โฮล์มส์ เงามรณะของแจ็คเดอะริปเปอร์.txt  Book - Sherlock Holmes four investigations (TH).txt  Bubbly (THEN) บับบลี.txt  Cash & Gun (TH) อย่าซ่ากับปืน.txt  Cat In The Box (THJP) เหมียวอินเดอะบ๊อกซ์.txt  Chinatown (TH) ไชน่าทาวน์.txt  Citadels Classic(TH) ศึกสร้างเมือง.txt  Coconut (TH) - ลิงยิงมะพร้าว.txt  Colt Express (TH) ขุมทรัพย์ม้าเหล็ก.txt  Coup (TH) เกมโค่นอำนาจ.txt  Dead of Winter (TH) เหมันต์มรณะ.txt  Dobble minions (TH) ด็อบเบิล มินเนี่ยน.txt  Down Force (TH) นักซิ่งสายฟ้า.txt  Dream On (TH) ทีมสร้างฝัน.txt  Exploding Kitten (TH) เหมียวระเบิด.txt  Exploding Kitten Party Pack (TH) เหมียวระเบิดปาร์ตี้แพ็ค.txt  Exploding Minions (TH) มินเนี่ยน ระเบิด.txt  (+108 more)
notebook/: main.ipynb  pyproject.toml  testRAG.csv
(+4 files in other folders)
